     [ssh-keyscan.c]
     check that server supports v1 for -t rsa1, report from wirth@dfki.de
   - jakob@cvs.openbsd.org 2001/12/18 10:04:21
     [auth.h hostfile.c hostfile.h]
     remove auth_rsa_read_key, make hostfile_ready_key non static; ok markus@
   - jakob@cvs.openbsd.org 2001/12/18 10:05:15
     [auth2.c]
     log fingerprint on successful public key authentication; ok markus@

20011219
 - (stevesk) OpenBSD CVS sync X11 localhost display
   - stevesk@cvs.openbsd.org 2001/11/29 14:10:51
     [channels.h channels.c session.c]
     sshd X11 fake server will now listen on localhost by default:
     $ echo $DISPLAY
     localhost:12.0
     $ netstat -an|grep 6012
     tcp        0      0  127.0.0.1.6012         *.*                    LISTEN
     tcp6       0      0  ::1.6012               *.*                    LISTEN
     sshd_config gatewayports=yes can be used to revert back to the old
     behavior.  will control this with another option later.  ok markus@
   - stevesk@cvs.openbsd.org 2001/12/19 08:43:11
     [includes.h session.c]
     handle utsname.nodename case for FamilyLocal X authorization; ok markus@
	
20011207
 - (bal) PCRE no longer required.  Banished from the source along with
   fake-regex.h
 - (bal) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/12/06 18:02:32
     [channels.c sshconnect.c]
     shutdown(sock, SHUT_RDWR) not needed here; ok markus@
   - stevesk@cvs.openbsd.org 2001/12/06 18:09:23
     [channels.c session.c]
     strncpy->strlcpy.  remaining strncpy's are necessary.  ok markus@
   - stevesk@cvs.openbsd.org 2001/12/06 18:20:32
     [channels.c]
     disable nagle for X11 fake server and client TCPs.  from netbsd.
     ok markus@

20011206
 - (bal) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2001/11/14 20:45:08
     [sshd.c]
     errno saving wrapping in a signal handler
   - markus@cvs.openbsd.org 2001/11/16 12:46:13
     [ssh-keyscan.c]
     handle empty lines instead of dumping core; report from sha@sha-1.net